feat: add get user endpoint with updated auth middleware
